<resources>
    <string name="app_name">TMDB Watch List</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_movie">EditMovieActivity</string>
    <string name="title_activity_web_movies">WebMovies</string>
    <string name="delete_list">Delete List</string>
    <string name="exitapp">exitApp</string>
    <string name="write_title_here">Write Title Here</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enter_url">Enter URL</string>
    <string name="write_overview_here">Write Overview Here</string>
    <string name="trailer">Trailer</string>
    <string name="update">Update</string>
    <string name="my_watch_list">My Watch List</string>
    <string name="rate_movie">Rate Movie</string>
    <string name="watched">Watched</string>
    <string name="release_date">Release Date: </string>
    <string name="show_image">Show Image</string>
    <string name="english">English</string>
    <string name="עברית">עברית</string>
    <string name="exitTwice">Please click BACK twice to exit</string>
    <string name="manual">Manual</string>
    <string name="web">Web</string>
    <string name="addMovie">Add a movie to your list</string>
    <string name="plsChoose">Please Choose</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="updated">Movie Updated</string>
    <string name="search">TMDB Search</string>
    <string name="release">Release Date: </string>
    <string name="cantSave">Must enter Title or Press Cancel</string>
    <string name="you_have_no_movies_on_your_list_yet_click_on_the_button_to_make_the_best_list_in_the_world">You have no movies on your list yet. Click on the + button to make the best list in the world!</string>
    <string name="languages">Languages</string>
    <string name="Exit">Exit</string>
    <string name="Español">Español</string>
    <string name="عربى">عربى</string>
</resources>